fix(gamepad-poc): fix bug where joystick did not respond on mobile

--- a/apps/gamepad-poc/src/app/joystick/joystick.component.scss
+++ b/apps/gamepad-poc/src/app/joystick/joystick.component.scss
@@ -3,4 +3,9 @@
   border: 1px solid black;
   width: 200px;
   height: 200px;
+  z-index: 1000;
+}
+
+.joystick {
+  height: 100%;
 }
